# capra

./: .gitignore  Cargo.toml  LICENSE  README.md
capra-core/: Cargo.toml  README.md
capra-core/src/: lib.rs
capra-core/src/common/: dive_segment.rs  gas.rs  mod.rs  tank.rs
capra-core/src/deco/: deco_algorithm.rs
capra-core/src/deco/zhl16/: mod.rs  tissue_constants.rs  util.rs  variant.rs
capra-demo/: Cargo.toml
capra-demo/src/: main.rs
src/: demo.rs  depth.rs  dive_plan.rs  environment.rs  gas.rs  lib.rs  main.rs  parameter.rs  parameters.rs  result.rs  segment.rs  tissue.rs  util.rs
src/common/: deco_algorithm.rs  deco_stop.rs  depth.rs  dive_segment.rs  gas.rs  mod.rs  otu.rs  pressure.rs  tank.rs
src/deco/: deco_algorithm.rs  mod.rs  tissue.rs
src/deco/zhl16/: builder.rs  gradient_factor.rs  mod.rs  tissue_constants.rs  util.rs  variant.rs
src/dive_plan/: dive.rs  mod.rs  open_circuit.rs
src/gas/: mod.rs  otu.rs
src/gas_plan/: mod.rs  otu.rs  tank.rs
src/modes/: mod.rs  open_circuit.rs
src/plan/: mod.rs  plan_result.rs
src/plan/open_circuit/: mod.rs
src/planner/: dive.rs  mod.rs  open_circuit.rs
src/planning/: dive_result.rs  diveresult.rs  mod.rs  otu.rs
src/planning/diveplan/: mod.rs  open_circuit.rs
src/planning/gasplan/: mod.rs
src/planning/modes/: mod.rs  open_circuit.rs
src/tissue/: mod.rs
src/units/: air_consumption.rs  altitude.rs  consumption.rs  consumption_rate.rs  depth.rs  mod.rs  pressure.rs  rate.rs  water_density.rs
src/zhl16/: mod.rs  util.rs
