[package]
name = "capra"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"
license = "MIT"
description = "Diver compression and dive planning library"
repository = "https://github.com/the-emerald/capra"
readme = "README.md"
keywords = ["scuba", "diving", "decompression", "dive-plan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "capra"
path = "src/lib.rs"

[dependencies]
time = { version = "^0.2.16" , default-features = false }
num-traits = { version = "^0.2.12", default-features = false }
thiserror = "^1.0.20"
serde = { version = "^1.0.114", optional = true}
capra-core = { path = "capra-core", default-features = false }

[features]
default = ["std"]
std = ["capra-core/std"]
use-serde = ["capra-core/use-serde"]