[package]
name = "capra"
version = "0.3.2"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"
license = "MIT"
description = "Dive planning library"
repository = "https://github.com/the-emerald/capra"
readme = "README.md"
keywords = ["scuba", "diving", "decompression", "dive-plan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "capra"
path = "src/lib.rs"

[dependencies]
time = { version = "^0.2.16"}
serde = { version = "^1.0.114", optional = true}

[features]
use-serde = ["serde/derive"]