[package]
name = "capra-core"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
description = "Diver compression library"
repository = "https://github.com/the-emerald/capra"
readme = "README.md"
edition = "2018"
keywords = ["scuba", "diving", "decompression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "^0.2.16" , default-features = false }
num-traits = { version = "^0.2.12", default-features = false }
thiserror = "^1.0.20"
serde = { version = "^1.0.114", optional = true}

[features]
default = ["std"]
std = ["time/default", "num-traits/default"]
use-serde = ["serde/derive", "time/serde"]